<resources>
    <string name="app_name">Plantilla</string>
    <string name="lbl_login">Iniciar sesión</string>
    <string name="lbl_signup">Registrarse</string>
    <string name="lbl_username">Nombre de usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="lbl_alerts">Alertas</string>
    <string name="lbl_chats">Chat</string>
    <string name="lbl_groups">Grupos</string>
    <string name="lbl_work">Tareas</string>
    <string name="lbl_nothing">Nada</string>
    <string name="title_activity_chat_room">ChatRoom</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>